open deposit modal - fix icons align

--- a/src/components/cabinet/OpenDepositModal/OpenDepositModal.less
+++ b/src/components/cabinet/OpenDepositModal/OpenDepositModal.less
@@ -41,7 +41,7 @@
 
 .OpenDepositModal__type_info__row {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 8px;
   width: 100%;
 
@@ -52,7 +52,7 @@
   .isvg {
     width: 24px;
     height: 24px;
-    margin-right: 4px;
+    margin-right: 8px;
   }
 }
 
